实现两种含参的实例化方式：JDK, CGLIB